# TabbedBoxMaker

./: .env  .gitignore  CI_DOCUMENTATION.md  README.md  README_REFACTOR.md  boxmaker.inx  boxmaker.py  boxmaker_constants.py  boxmaker_core.py  boxmaker_exceptions.py  cardboardboxmaker.inx  cardboardboxmaker.py  cli_examples.py  pre_commit_test.py  pyproject.toml  schroffmaker.inx  test_boxmaker.py
.github/workflows/: ci.yml  release.yml
tabbedboxmaker/: __about__.py  __init__.py  boxmaker.py  inkex.py  schroff.py
tests/: test_path.py  test_schroff.py  test_tabbedbox.py
