[project]
name = "tabbedboxmaker"
description = 'A free Inkscape extension for generating tab-jointed box patterns'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-2.0"
keywords = []
authors = [
  {name = "Paul Hutchison"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/paulh-rnd/TabbedBoxMaker#readme"
Issues = "https://github.com/paulh-rnd/TabbedBoxMaker/issues"
Source = "https://github.com/paulh-rnd/TabbedBoxMaker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tabbedboxmaker/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "inkex",
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tabbedboxmaker --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "tabbedboxmaker/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
